FIX: force graph change chart type

--- a/mpmf-server/views/partials/metab-head.ejs
+++ b/mpmf-server/views/partials/metab-head.ejs
@@ -3715,11 +3715,11 @@
             var chart_metric_name = document.createElement("p");
             chart_metric_name.id = "chartHeader";
             chart_metric_name.innerHTML = display_metric.toUpperCase();
-            chart_metric_name.style.color = "white";
+            chart_metric_name.style.color = "aliceblue";
             chart_metric_name.style.fontWeight = "bold";
             chart_metric_name.style.padding = "0.2em";
             chart_metric_name.style.fontSize = "1.2vw";
-            chart_metric_name.style.opacity = 0.8;
+            chart_metric_name.style.opacity = 1;
             chart_metric_name.style.letterSpacing = "0.5vh";
             //chart_metric_name.style.marginLeft = "5vh";
             //chart_metric_name.className = "text-center";
