--- a/mpmf-server/views/partials/metab-head.ejs
+++ b/mpmf-server/views/partials/metab-head.ejs
@@ -4593,10 +4593,25 @@
                     .attr("fill-opacity", 0.9);
                 }
 
+                // tooltip for switch modes
+                var tooltip = d3.select("#tooltip");
+                if(streamExpand){
+                    var tool_text = "Click for Stacked Mode";
+                }else{
+                    var tool_text = "Click for 100% Mode";
+                }
+                tooltip.html(tool_text);
+                tooltip.style('left', (event.pageX + 10) + 'px');
+                tooltip.style('top', (event.pageY + 10) + 'px');
+                tooltip.style("visibility", "visible");
+
+
                 
             })
             .on("mouseout", function(event){
                 d3.selectAll(".streamHighlight").remove();
+                var tooltip = d3.select("#tooltip");
+                tooltip.style("visibility", "hidden");
             })
             .on("click", function(event){
 
@@ -7461,7 +7476,7 @@
                         .attr("x", xScale_par("Retention Time") - 4.2*currentRadius)
                         .attr("y", yScales["Retention Time"](yRT) + currentRadius)
                         .attr("text-anchor", "end")
-                        .style("font-size", "0.7vw")
+                        .style("font-size", "1vw")
                         .attr("fill", function(){
                             if(theme == "dark"){return "white";}
                             return "var(--dark)";
@@ -7470,7 +7485,7 @@
                             if(theme == "dark"){return "white";}
                             return "var(--dark)";
                         })
-                        .style("text-shadow", "0.1vh 0.1vh gray")
+                        //.style("text-shadow", "0.1vh 0.1vh gray")
                         .text(d.name);
 
                         // highlight
@@ -7533,6 +7548,23 @@
                     }else{
                         return d.colour; //'url(#circleGradLight'+d.comp+')'; 
                     } 
+                })
+                .on("mouseover", function(event, d){
+                    var tooltip = d3.select("#tooltip");
+                    if(!axesExpand[d.x]){
+                        var tool_text = "Click to Expand Axis";
+                    }else{
+                        var tool_text = "Click to Reset Axis";
+                    }
+                    tooltip.html(tool_text);
+                    tooltip.style('left', (event.pageX - 10*v_height_unit) + 'px');
+                    tooltip.style('top', (event.pageY - 5*v_height_unit) + 'px');
+                    tooltip.style("visibility", "visible");
+
+                })
+                .on("mouseout", function(event){
+                    var tooltip = d3.select("#tooltip");
+                    tooltip.style("visibility", "hidden");
                 })
                 .on("click", function(event, d){
         
@@ -8308,11 +8340,21 @@
                     return 0.05;
                 });
                 d3.selectAll(".chartline").style("opacity", 0.1);
+
+                // add tooltip
+                var tooltip = d3.select("#tooltip");
+                tooltip.html("Click to Focus" +  "<br>" + "(Dbl Click Chart <br> to Reset)");
+                tooltip.style('left', (event.pageX + 10) + 'px');
+                tooltip.style('top', (event.pageY + 10) + 'px');
+                tooltip.style("visibility", "visible");
                 
             })
             .on("mouseout", function(event){ 
                 d3.selectAll(".point").style("opacity", 1);
                 d3.selectAll(".chartline").style("opacity", 1);
+
+                var tooltip = d3.select("#tooltip");
+                tooltip.style("visibility", "hidden");
             })
             .on("click", function(event){
                 // hide tooltip (else sticky)
@@ -8388,8 +8430,15 @@
                             return "var(--dark)";
                         })
                         .style("text-anchor", anchor)
-                        .style("text-shadow", "0.1vh 0.1vh gray")
+                        //.style("text-shadow", "0.1vh 0.1vh gray")
                         .text(machine_data.components[i].component_name.replace("_", " "));
+
+                        // add tooltip
+                        var tooltip = d3.select("#tooltip");
+                        tooltip.html("Click to Focus" +  "<br>" + "(Dbl Click Chart <br> to Reset)");
+                        tooltip.style('left', (event.pageX + 10) + 'px');
+                        tooltip.style('top', (event.pageY + 10) + 'px');
+                        tooltip.style("visibility", "visible");
                         
                     })
                     .on("mouseout", function(event, d){
@@ -8397,6 +8446,9 @@
                         d3.selectAll(".chartline").style("stroke-opacity", 0.3);
                         d3.selectAll(".point").style("opacity", 1);
                         d3.select(".hover-text").remove();
+
+                         var tooltip = d3.select("#tooltip");
+                        tooltip.style("visibility", "hidden");
                     })
                     .on("click", function(event, d){
                         // hide tooltip (else sticky)
